--- a/main.css
+++ b/main.css
@@ -136,8 +136,8 @@ body {
  /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-box {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
+  width: 450px;
+  height: 180px;
   border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
@@ -168,13 +168,13 @@ body {
 
 /* Style the front side (fallback if image is missing) */
 .flip-box-front {
-  background-color: #bbb;
-  color: black;
+  background-color: #474e5d;
+  color: gold;
 }
 
 /* Style the back side */
 .flip-box-back {
-  background-color: dodgerblue;
-  color: white;
+  background-color: #474e5d;
+  color: gold;
   transform: rotateY(180deg);
 } 
