--- a/main.css
+++ b/main.css
@@ -2,20 +2,26 @@
   box-sizing: border-box;
 }
 
+
 /* Set a background color */
+
 body {
   background-color: #474e5d;
   font-family: Helvetica, sans-serif;
 }
 
+
 /* The actual timeline (the vertical ruler) */
+
 .timeline {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
 }
 
+
 /* The actual timeline (the vertical ruler) */
+
 .timeline::after {
   content: '';
   position: absolute;
@@ -27,7 +33,9 @@ body {
   margin-left: -3px;
 }
 
+
 /* Container around content */
+
 .container {
   padding: 10px 40px;
   position: relative;
@@ -35,7 +43,9 @@ body {
   width: 50%;
 }
 
+
 /* The circles on the timeline */
+
 .container::after {
   content: '';
   position: absolute;
@@ -49,17 +59,23 @@ body {
   z-index: 1;
 }
 
+
 /* Place the container to the left */
+
 .left {
   left: 0;
 }
 
+
 /* Place the container to the right */
+
 .right {
   left: 50%;
 }
 
+
 /* Add arrows to the left container (pointing right) */
+
 .left::before {
   content: " ";
   height: 0;
@@ -73,7 +89,9 @@ body {
   border-color: transparent transparent transparent white;
 }
 
+
 /* Add arrows to the right container (pointing left) */
+
 .right::before {
   content: " ";
   height: 0;
@@ -87,12 +105,16 @@ body {
   border-color: transparent white transparent transparent;
 }
 
+
 /* Fix the circle for containers on the right side */
+
 .right::after {
   left: -16px;
 }
 
+
 /* The actual content */
+
 .content {
   padding: 20px 30px;
   background-color: white;
@@ -100,49 +122,53 @@ body {
   border-radius: 6px;
 }
 
+
 /* Media queries - Responsive timeline on screens less than 600px wide */
+
 @media screen and (max-width: 600px) {
-/* Place the timelime to the left */
+  /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
   }
-
-/* Full-width containers */
+  /* Full-width containers */
   .container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
-
-/* Make sure that all arrows are pointing leftwards */
+  /* Make sure that all arrows are pointing leftwards */
   .container::before {
     left: 60px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
-
-/* Make sure all circles are at the same spot */
-  .left::after, .right::after {
+  /* Make sure all circles are at the same spot */
+  .left::after,
+  .right::after {
     left: 15px;
   }
-
-/* Make all right containers behave like the left ones */
+  /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
   }
 }
 
- /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+
+/* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+
 .flip-box {
   background-color: transparent;
   width: 450px;
   height: 180px;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
 }
 
+
 /* This container is needed to position the front and back side */
+
 .flip-box-inner {
   position: relative;
   width: 100%;
@@ -152,29 +178,40 @@ body {
   transform-style: preserve-3d;
 }
 
+
 /* Do an horizontal flip when you move the mouse over the flip box container */
+
 .flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
 
+
 /* Position the front and back side */
-.flip-box-front, .flip-box-back {
+
+.flip-box-front,
+.flip-box-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden;
+  /* Safari */
   backface-visibility: hidden;
 }
 
+
 /* Style the front side (fallback if image is missing) */
+
 .flip-box-front {
   background-color: #474e5d;
   color: gold;
 }
 
+
 /* Style the back side */
+
 .flip-box-back {
   background-color: #474e5d;
   color: gold;
   transform: rotateY(180deg);
-} 
+}
+
